# openevolve

./: .gitignore  LICENSE  README.md  pyproject.toml
.openevolve/: openevolve.db
configs/: algorithmic_optimization.yml  default.yml  demo_math.yml
examples/: algorithmic_optimization.py
scripts/: export_archive.py  inspect_db.py  offline_demo.py  run_controller.py
src/httpx/: __init__.py
src/openevolve/: __init__.py  apply.py  blocks.py  cascade.py  cli.py  config.py  controller.py  database.py  db.py  diffs.py  engine.py  evaluation.py  llm_client.py  meta_prompt.py  prompt_sampler.py  prompts.py  sandbox.py  schema.sql  selection.py  utils.py  viz.py  workers.py
src/openevolve.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/openevolve/evaluators/: __init__.py  base.py  cascade.py
tasks/: __init__.py
tasks/algorithmic_optimization/: __init__.py  evaluate.py  program.py
tasks/speed_sort/: evaluate.py  program.py
tasks/speed_sort/tests/: test_correctness.py
tasks/toy_sum_squares/: __init__.py  evaluate.py  program.py
tasks/toy_sum_squares/tests/: test_correctness.py
tests/: test_algorithmic_evaluation.py  test_blocks.py  test_controller.py  test_controller_demo.py  test_db.py  test_diffs.py  test_engine_smoke.py  test_llm_client.py  test_meta_prompt.py  test_prompt_sampler.py  test_selection.py
