[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openevolve"
version = "0.1.0"
description = "LLM-driven evolutionary programming framework"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "OpenEvolve Contributors"}]
requires-python = ">=3.11"
dependencies = [
    "black>=24.0.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlmodel>=0.0.16",
    "typing-extensions>=4.9",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.black]
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
namespace_packages = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
